--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 
       - run:
           name: run tests
-          command:
+          command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v --cov=my_func
