--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            virtualenv -p /usr/local/bin/python3.7 .env
+            source .env/bin/activate
             pip install -r requirements.txt
 
       - run:
